capstone/k8s/overlays/prod/images-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: web
          image: learnhub/web-ui:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: main
          image: learnhub/user-service:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrollment-service
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: main
          image: learnhub/enrollment-service:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: main
          image: learnhub/payment-service:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: main
          image: learnhub/notification-service:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service-blue
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "1.0.0"
    spec:
      containers:
        - name: main
          image: learnhub/course-service:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service-green
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/version: "1.1.0"
    spec:
      containers:
        - name: main
          image: learnhub/course-service:1.1.0
